
        - Added method queue_member_unpause to unpause a queue member.

        - Removed Asterisk::AMI::Common::Dev. New methods will just be added to Asterisk::AMI::Common and a note
        added about compatibility.

        - Abstracted some of the logic in Asterisk::AMI::Common to a seperate module so that it may be shared with
        Asterisk::AMI::Helper.

        NOT DONE

        - Added Asterisk::AMI::Helper. Similiar to Asterisk::AMI::Common but can be used in an event based application.

        - Default Authentication method changed to MD5 instead of plaintext. (Auto failback?)

        - Originate Hack? Default? On? Off?

0.2.5
        - Fix RT#65782 Consume all memory on dropped connection.

0.2.4
        - Due to a bug introduced in 0.2.3 get_event would return a reference to the current Asterisk::AMI object instead of the event. 

0.2.3
        - The Carp module is now required.

        - Switched certain warnings to now use carp where appropriate.

        - We now honor the 'use warnings' pragma and only present warnings when it is enabled. To disable all warnings
        specific to this module you can use 'no warnings qw(Asterisk::AMI)'.

	- Deprecated the use of the CALLBACK and TIMEOUT keys for setting timeouts and callbacks for actions sent with
	send_action. A warning is emitted if they are used. Please use the new syntax introduced in version version 0.2.0.
        This was done to minimize potential hash key collisions with actual manager command options.

	- Allow passing of a perl variable to an action callback via a new argument for the send_action() method.
	This can be used to pass along additional information to the callback. See the documentation for more details.

	- Internal changes to how the constructor works, mostly pertaining to better option validation and making it
	more flexible. Obvious errors should now be caught earlier (e.g. not using a subroutine refernce for an error
	or event handler).
